# feedforger

./: .gitignore  CONTEXT.md  Makefile  README.md  app.py  db.py  filters.py  main.py  models.py  network.py  pyproject.toml  recipes.py  utils.py
.github/workflows/: main.yml
recipes/: recipes.toml
src/feedforger/: __main__.py  app.py  cli.py  content.py  content_store.py  db.py  filters.py  log.py  models.py  network.py  recipes.py  settings.py
tests/: test_build.py  test_content.py  test_content_store.py  test_database.py  test_recipes.py  test_settings.py
tests/fixtures/: characterization_feed.xml
