[project]
name = "feedforger"
version = "0.1.0"
description = "RSS feed aggregator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "feedparser",
    "python-dateutil",
    "aiosqlite",
    "pydantic",
    "beautifulsoup4>=4.13.3",
]

[tool.ruff.lint]
extend-select = ["I"]